# Autonomous-Robot

./: Node Network plane
src/lidar_obstacle_avoid/: CMakeLists.txt  package.xml
src/lidar_obstacle_avoid/src/: .obstacle_avoider.cpp.swp  obstacle_avoider.cpp
